Added cors; Added specifications to swagger and fix success (201) created message return for specifications
